# OCR_Backend

./: Dockerfile  pyproject.toml  render.yaml  requirements.txt  vercel.json
ocr/: views.py
ocr_backend/: asgi.py  settings.py  urls.py  wsgi.py
