[tool.poetry]
name = "ocr-backend"
version = "0.1.0"
description = ""
authors = ["Anubhav-pandey004 <anubhavpandeyayush@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
